# LabelHub

./: .dockerignore  .env.example  .gitignore  MEMBER_B_DELIVERABLE.md  README.md  _verify_ecs.py  labelhub_team_plan.md  package-lock.json  package.json  skills-lock.json
apps/agent-runtime/: Dockerfile  README.md  STRUCTURE_CHECKLIST.md  pyproject.toml
apps/agent-runtime/agent_runtime/: __init__.py  main.py
apps/agent-runtime/agent_runtime/agents/: __init__.py  assignment_agent.py  review_assist_agent.py  state.py
apps/agent-runtime/agent_runtime/mcp/: __init__.py  client.py
apps/agent-runtime/agent_runtime/observability/: __init__.py  agent_run_recorder.py  tracer.py
apps/agent-runtime/agent_runtime/schemas/: __init__.py  agent_run.py  common.py  mcp.py
apps/agent-runtime/agent_runtime/skills/: __init__.py  base.py  manager.py
apps/agent-runtime/skills/: assignment-policy.json  assignment-policy.md  review-assist.json  review-assist.md
apps/agent-runtime/src/labelhub_agent_runtime/: main.py
apps/api/: Dockerfile  pom.xml  (+1 more)
deploy/: docker-compose.dev.yml  docker-compose.yml
docs/: ai-coding-process.md  architecture.md  deployment-guide.md  development-process.md  multi-agent-pipeline.md
scripts/: _deploy_all.py  _fix_grafana.py  _fix_nginx.py  _verify_grafana.py  browser_verify.py  check_db.py  deploy.py  fix_ecs_git.py  redeploy.py  release_gate.py  repair_migrate.py  test_deepseek.py  test_frontend_proxy.py  ui_drawer_verify.mjs  verify_deploy.py
skills/: dataset-profile.md  design-enterprise.md  instruction-refine.md  task-schema-builder.md
(+180 files in other folders)
