[project]
name = "labelhub-agent-runtime"
version = "0.1.0"
description = "LabelHub LangGraph-ready agent runtime for task building agents."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.30.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
