[project]
name = "labelhub-agent-runtime"
version = "0.1.0"
description = "LabelHub Agent Runtime - LangGraph based orchestration for Production Collaboration Agents (Member B)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-uuid7>=0.1.0",
]

[project.scripts]
labelhub-agent-runtime = "agent_runtime.main:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
